# MathPlus

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENCE  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: build.yml
installer/: MathPlus.iss
rust_calculator/: Cargo.toml
rust_calculator/src/: history.rs  history_ui.rs  main.rs  shortcuts.rs
src/: app.rs  history_ui.rs  logic.rs  main.rs  platform.rs  theme.rs  updater.rs
src/ui/: actions.rs  display.rs  keypad.rs  layout.rs  mod.rs  scientific.rs
