# MathPlus — a tiny Rust calculator built with egui/eframe.
# This file defines the package metadata and the dependencies needed to build it.

[package]
name = "MathPlus"
version = "1.2.1"
edition = "2024"

[dependencies]
egui = "0.27"      # GUI framework used for drawing the interface.
eframe = "0.27"    # Windowing + app framework built on top of egui.
meval = "0.2.0"    # Small math expression evaluator used for calculations.

[profile.release]
opt-level = "z"    # Optimize for small binary size (good for tiny tools).

# Define the main binary target.
[[bin]]
name = "MathPlus"          # The output executable name.
path = "src/main.rs"       # Entry point for the application.